src/components/pricing/style.scss
#pricing-container {
  width: 100%;
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: flex-start;
  position: relative;

  & > .plan-notice {
    @include typography(menu);
    padding-bottom: 40px;
  }

  & > .pricing-toggle {
    margin-bottom: 40px;
  }

  & > .scroll-container {
    width: 100%;
    max-width: 100%;
    overflow-x: auto;

    &::-webkit-scrollbar {
      display: none;
    }

    & > .arrow {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      z-index: 2;
      background-color: transparent;
      border: none;
      display: flex;
      flex-flow: row;
      align-items: center;
      justify-content: center;
      cursor: pointer;

      &:focus-visible {
        outline: none;
      }

      &.left {
        left: 0;
        transform: translateY(-50%) rotateZ(180deg);
      }

      &.right {
        right: 0;
      }
    }

    & > .gradient {
      height: 100%;
      width: 100px;
      position: absolute;
      top: 0;

      &.left {
        left: 0;
        background: linear-gradient(270deg, rgba(249, 249, 249, 0) 0%, #f9f9f9 70.5%);
      }

      &.right {
        right: 0;
        background: linear-gradient(90deg, rgba(249, 249, 249, 0) 0%, #f9f9f9 70.5%);
      }
    }
  }

  .plans {
    min-width: 100%;
    display: flex;
    flex-flow: row nowrap;
    column-gap: 20px;
    position: relative;

    .pricing-card {
      min-width: 255px;
      box-sizing: border-box;
      border: 1px solid var(--text-body-primary);

      & > * {
        width: 100%;
      }

      & > .header {
        display: flex;
        align-items: center;
        justify-content: center;
        box-sizing: border-box;
        padding: 20px;

        p {
          @include typography(pricebox-title);
          color: var(--text-body-primary);
          text-wrap: nowrap;
        }
      }

      & > .pricing-container {
        box-sizing: border-box;
        display: flex;
        flex-flow: column;
        align-items: center;
        justify-content: flex-start;
        row-gap: 10px;
        padding: 20px 0;

        & > .price {
          display: flex;
          flex-flow: row nowrap;
          align-items: center;
          justify-content: center;
          column-gap: 7px;
          width: 100%;

          &.spaced {
            padding-bottom: 45px;
          }

          &.free {
            padding-bottom: 80px;
          }

          & > .suffix {
            @include typography(footer);
            color: var(--text-body-primary);
          }

          .free {
            font-family: "Poppins";
            font-size: 30px;
            font-weight: 600;
            color: var(--text-body-primary);
          }

          .annual {
            display: flex;
            flex-flow: row;
            align-items: center;
            justify-content: center;
            column-gap: 4.5px;

            & > :nth-child(1) {
              @include typography(footer-section);
              text-decoration: line-through;
            }

            & > :nth-child(2) {
              font-family: Poppins;
              font-size: 30px;
              font-style: normal;
              font-weight: 600;
              line-height: normal;
              color: var(--surface-main-primary);
            }
          }

          .monthly {
            display: flex;
            flex-flow: row;
            align-items: center;
            justify-content: center;
            column-gap: 8px;
            font-family: Poppins;
            font-size: 34px;
            font-style: normal;
            font-weight: 600;
            line-height: normal;

            & > span {
              @include typography(footer);

              & {
                font-weight: 300;
              }
            }
          }
        }

        & > .annual-message {
          @include typography(footer);
          color: var(--text-body-primary);
          text-align: center;
          text-wrap: balance;
          box-sizing: border-box;
          padding: 0 20px;
          margin-bottom: 6px;
        }

        & > .action-container {
          display: flex;
          flex-flow: row nowrap;
          align-items: center;
          justify-content: center;
          width: 100%;

          & > .action {
            flex-grow: 0;
            display: flex;
            flex-flow: row nowrap;
            align-items: center;
            justify-content: center;
            min-width: calc(86.5px + (32 * 2px));
            border-radius: 25px;
            border: 1px solid var(--text-body-primary);
            box-sizing: border-box;
            text-decoration: none;
            padding: 10px;

            &:hover {
              cursor: pointer;
            }

            span {
              @include typography(h3);
              color: var(--text-body-primary);
            }
          }
        }
      }
    }
  }
}

#pricing-container {
  .pricing-card {
    .divider {
      width: 100%;
      position: relative;

      .line {
        content: " ";
        display: block;
        height: 1px;
        width: 100%;
        background-color: var(--border-separator);
      }

      .discount-badge {
        position: absolute;
        left: 50%;
        top: 50%;
        border-radius: 5px;
        padding: 0 8px;
        box-sizing: border-box;
        background-color: var(--surface-main-primary);
        width: min-content;
        transform: translateY(-50%) translateX(-50%);

        p {
          @include typography(footer);
          text-wrap: nowrap;
          color: var(--text-button-secondary);
        }
      }
    }
  }
}

#pricing-container {
  .pricing-card {
    .content-container {
      box-sizing: border-box;
      padding: 20px;

      ul {
        margin: 0;
        padding: 0;
        padding-left: 15px;

        li {
          @include typography(pricebox-list);
          margin-bottom: 7px;
          text-wrap: balance;

          & > span {
            display: block;
            @include typography(footer);
            color: var(--text-body-primary);
          }
        }
      }
    }
  }
}

